--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-table-component": "^1.2.2",
+    "react-native-tableview": "^3.1.0",
     "react-native-web": "~0.19.10",
     "react-navigation-stack": "^2.10.4"
   },
