--- a/package.json
+++ b/package.json
@@ -18,15 +18,24 @@
     "@expo/vector-icons": "^14.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@stream-io/flat-list-mvcp": "^0.10.3",
     "axios": "^1.7.2",
-    "expo": "~51.0.11",
+    "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.5",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.15",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -36,15 +45,18 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "15.2.0",
     "react-native-table-component": "^1.2.2",
     "react-native-tableview": "^3.1.0",
     "react-native-web": "~0.19.10",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "stream-chat-expo": "^5.33.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
