--- a/package.json
+++ b/package.json
@@ -18,40 +18,41 @@
     "@expo/vector-icons": "^14.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "11.3.1",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@stream-io/flat-list-mvcp": "^0.10.3",
     "axios": "^1.7.2",
-    "expo": "~51.0.22",
-    "expo-constants": "~16.0.2",
-    "expo-document-picker": "^12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.5",
-    "expo-image-manipulator": "~12.0.5",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-media-library": "~16.0.4",
-    "expo-router": "~3.5.15",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^50.0.20",
+    "expo-constants": "~15.4.6",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.9",
+    "expo-font": "~11.10.3",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.2",
+    "expo-router": "~3.4.10",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.4",
+    "expo-web-browser": "~12.8.2",
+    "metro-cache": "^0.80.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-table-component": "^1.2.2",
     "react-native-tableview": "^3.1.0",
     "react-native-web": "~0.19.10",
@@ -60,11 +61,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^28.1.6",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.2",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
